tests/ui/return/tail-expr-if-as-return.rs
fn main() {
    if true {
        "" //~ ERROR mismatched types [E0308]
    }
}
